--- a/about.css
+++ b/about.css
@@ -31,6 +31,8 @@ h4 {
   font-weight: bold;
   color: #2a2a29;
   font-size: 0.75em;
+  pointer-events: none;
+  text-decoration: none;
 }
 
 .location {
@@ -155,7 +157,7 @@ h4 {
   grid-template-columns: 1fr repeat(11, 1fr);
   grid-auto-rows: auto;
   grid-column-gap: 30px;
-  margin: 150px 25% 0 25%;
+  margin: 102px 25% 0 25%;
 }
 
 .intro {
@@ -193,18 +195,18 @@ h4 {
 }
 
 #ulule {
-  grid-column-start: 7;
-  grid-column-end: 13;
-  grid-row-start: 6;
-  grid-row-end: 7;
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row-start: 7;
+  grid-row-end: 8;
   
   margin-top: 0;
   margin-bottom: 0;
 }
 
 #paragon {
-  grid-column-start: 1;
-  grid-column-end: 7;
+  grid-column-start: 7;
+  grid-column-end: 13;
   grid-row-start: 6;
   grid-row-end: 7;
 
@@ -215,8 +217,8 @@ h4 {
 #autonome {
   grid-column-start: 1;
   grid-column-end: 7;
-  grid-row-start: 7;
-  grid-row-end: 8;
+  grid-row-start: 6;
+  grid-row-end: 7;
   
   margin-top: 0;
   margin-bottom: 0;
@@ -357,7 +359,7 @@ h4 {
 
 .about {
   grid-column-gap: 10px;
-  margin: 114px 20% 0 20%;
+  margin: 105px 20% 0 20%;
 }
 
 .intro {
@@ -388,18 +390,18 @@ h4 {
 }
 
 #ulule {
-  grid-column-start: 7;
-  grid-column-end: 13;
-  grid-row-start: 6;
-  grid-row-end: 7;
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row-start: 7;
+  grid-row-end: 8;
   
   margin-top: 0;
   margin-bottom: 0;
 }
 
 #paragon {
-  grid-column-start: 1;
-  grid-column-end: 7;
+  grid-column-start: 7;
+  grid-column-end: 13;
   grid-row-start: 6;
   grid-row-end: 7;
 
@@ -410,8 +412,8 @@ h4 {
 #autonome {
   grid-column-start: 1;
   grid-column-end: 7;
-  grid-row-start: 7;
-  grid-row-end: 8;
+  grid-row-start: 6;
+  grid-row-end: 7;
   
   margin-top: 0;
   margin-bottom: 0;
@@ -607,8 +609,8 @@ h4 {
 #ulule {
   grid-column-start: 1;
   grid-column-end: 13;
-  grid-row-start: 7;
-  grid-row-end: 8;
+  grid-row-start: 8;
+  grid-row-end: 9;
   
   margin-top: 0;
   margin-bottom: 0;
@@ -617,8 +619,8 @@ h4 {
 #paragon {
   grid-column-start: 1;
   grid-column-end: 13;
-  grid-row-start: 6;
-  grid-row-end: 7;
+  grid-row-start: 7;
+  grid-row-end: 8;
 
   margin-top: 0;
   margin-bottom: 0;
@@ -627,8 +629,8 @@ h4 {
 #autonome {
   grid-column-start: 1;
   grid-column-end: 13;
-  grid-row-start: 8;
-  grid-row-end: 9;
+  grid-row-start: 6;
+  grid-row-end: 7;
   
   margin-top: 0;
   margin-bottom: 0;
